Fix image and caption alignment

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -2,11 +2,14 @@
 ---
 
 @import "{{ site.theme }}";
-img + em
+.center-image
 {
   display: block;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto;  
+}
+img + em
+{
   text-align: center;
   font-style: normal;
   font-size: smaller;
